# restfulapi-cpp

./: .gitignore  BuildMac.sh  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  vs-build.ps1
src/: CMakeLists.txt  program.cpp
src/core/: corefunctions.hpp
src/logger/: CMakeLists.txt  SimpleLogger.cpp  SimpleLogger.hpp  loggerconfig.cpp  loggerconfig.hpp  loggertypes.hpp
src/restfulapi/: CMakeLists.txt  restfulapi.cpp  restfulapi.h
